# fast_io

./: .gitignore  CMakeLists.txt  license.txt  readme.md
benchmark/0001.refterm/: Makefile  filebuf_file.cc  filebufpch.hpp  fpipe.cc  fstream.cc  iostream.cc  out_buf.cc  pch.hpp  stdio.cc  stdio_hack.cc
benchmark/0002.file_io_tsc/: c_file_unlocked_tsc.cc  iobuf_file_tsc.cc  stdio_tsc.cc
benchmark/0003.file_io_hex/: fstream.cc  fstream_locale.cc  iobuf_file.cc  iobuf_file_l10n.cc
benchmark/0004.file_io_floating/: charconv_general.cc  charconv_hexfloat.cc  hexfloat.cc
benchmark/0005.time/: fast_io.cc  glibc_nl_langinfo.cc
benchmarks/: timer.h
benchmarks/0025.tcp_transmit_file/: client.cc  server.cc
benchmarks/0026.http_download/: download.cc  download_multithread.cc  download_obuf_file.cc
benchmarks/0027.pmr_push_back/: monotonic_io_buffer_vector.cc  random_numbers.cc  unsync_pool_monotonic_io_buffer_vector.cc  vector.cc
benchmarks/0028.intrinsic_vs_compiler_optimization/: benchnaive.cc  benchsse.cc  naive.cc  naive.h
benchmarks/0029.global_new/: default.cc  fast.cc  fast_thread_local.cc  heap_alloc.cc  heap_alloc.h  pool.h  thread_local_pool.h
benchmarks/0030.getline/: line_generator.cc  scan(line).cc
example/: CMakeLists.txt  concat1.cpp  concat2.cpp  concat3.cpp  concat4.cpp  concat5.cpp  concat6.cpp  concat7.cpp  print1.cpp  print2.cpp  print3.cpp  print4.cpp  print5.cpp  to1.cpp  to2.cpp  to3.cpp
examples/: CMakeLists.txt
examples/0000.compile/: compile.cc  compile_hosted.cc
examples/0001.helloworld/: helloworld.cc  helloworld_box.cc  helloworld_out.cc
examples/0002.a+b/: a+b.cc  base36_a+b.cc  byte.cc  hex_a+b.cc  int.cc  uint8_t.cc
examples/0003.manipulators/: blvw.cc  boolalpha.cc  chvw.cc  cond.cc  width.cc
examples/0004.time/: posix_clock_gettime.cc
examples/0005.sha/: compile_time.cc  cryptopp_md5.cc  cryptopp_sha256.cc  cryptopp_sha512.cc  hmac_sha256.cc  md5.cc  ossl_md5.cc  ossl_sha1.cc  ossl_sha256.cc  ossl_sha512.cc  sha1.cc  sha256.cc  sha512.cc
examples/0006.file_io/: file_loader.cc  ibuf_file.cc  utf8_to_utf16.cc
examples/0007.legacy/: c_file.cc  construct_fp_from_syscall.cc  construct_fstream_from_syscall.cc  filebuf_file.cc  get_file_descriptor_from_std_cout.cc  text.cc
examples/0008.dns/: dns.cc
examples/0008.openssl/: bio.cc  construct_bio_from_syscall.cc
examples/0009.filesystem/: add_utf8_bom_to_all_cplusplus_files.cc  binary_to_text.cc  gcc_symlink_install.cc
examples/0009.transmit/: http_test_zero_copy.cc
examples/0010.http/: http.cc  http_header_test.cc  http_test_zero_copy.cc  request_header.txt
examples/0010.status/: status.cc
examples/0011.qt/: construct_qtextstream_from_syscall.cc  qfile.cc  qstring.cc  qvariant.cc
examples/0012.transmit/: transmit.cc
examples/0013.graph/: dijkstra.cc  dijkstra_optimize.cc  generate_graph.cc  spfa.cc  spfa_optimize.cc
examples/0014.ip/: ipv4.cc  ipv6.cc
examples/0014.random/: generate_error_domain.cc  name.cc  password.cc
examples/0015.match/: ipv4.cc
examples/0015.udp/: client.cc  server.cc
examples/0016.dll/: win32.cc
examples/0017.network/: dns.cc  http.cc  raw.cc  tcp_client.cc  tcp_server.cc
examples/0018.i18n/: l10n.cc
examples/0018.llvm/: construct_llvm_raw_fd_ostream_from_syscall.cc
examples/0022.utf/: unicode_family.cc
examples/0033.win32_iocp/: iocp.cc
examples/0039.filebuf_file/: filebuf_file.cc  fstream.cc  io_at.cc  posix_file.cc  win32_file.cc
examples/0051.io_files/: io_files.cc
examples/0057.ospan/: ospan.cc
examples/0058.io_uring/: io_uring.cc
examples/0059.rep/: bin_pure.cc  bin_rep.cc  hex_pure.cc  hex_rep.cc  hexupper_pure.cc  hexupper_rep.cc
examples/0060.white_hole/: white_hole.cc
examples/0061.error_message/: wrong_input_device.cc  wrong_output_device.cc  wrong_type.cc
examples/0062.fmtlib/: fmtlib.cc  hello_hmac_sha256.cc  openssl.cc
examples/0063.native_async/: c_file.cc  filebuf_file.cc  fstream.cc  native.cc  posix.cc
examples/0064.async_transmit/: async_sync_transmit.cc
examples/0065.pulseaudio/: pulseaudio_simple.cc
examples/0066.copy/: ibuf_file.cc  obuf_file.cc
examples/0067.async_tcp/: client.cc  server.cc  sync_client.cc
examples/0068.close/: obuf_file.cc  onative_file.cc
examples/0069.memory_resource/: resource.cc
examples/0070.memory_map/: mmap.cc  mmap_transmit.cc
examples/0071.temporary_file/: manual.cc  obuf_file_temp.cc  prefer.cc
examples/0072.type_erasure/: oop.h  shape.cc  type_erasure.h
examples/0073.filesystem/: cout.cc  directory.cc  directory_file.cc  directory_generator.cc  directory_recursive.cc  fast_io_lines.cc  file_size.cc  fstream.cc
examples/0074.getline/: line.cc  line_generator.cc  scanline.cc
fuzzing/0000.write/: c_file_unlocked.cc  obuf_file.cc  ogb18030.cc
fuzzing/0003.concat/: basic_concat_buffer.cc
helpers/: open_mode.cc
helpers/bufsiz/: iobuf.h
helpers/class_sizeof/: stream.cc
helpers/ed25519/: curve25519.h
helpers/enum_code_generator/: open_mode.cc
helpers/nt/: nt_attributes.cc  test_nt.cc
helpers/temp_file/: temp.cc
include/: fast_io.h  fast_io_async.h  fast_io_concept.h  fast_io_core.h  fast_io_crypto.h  fast_io_device.h  fast_io_freestanding.h  fast_io_hosted.h  fast_io_i18n.h  fast_io_legacy.h  fast_io_locale.h  fast_io_network.h
include/fast_io_core_impl/: acceptor.h  alias.h  black_hole.h  buffer_view.h  char_category.h  compare.h  dll_mode.h  drain.h  dynamic_io_buffer.h  ebcdic.h  empty.h  fast_io_error.h  flush.h  igenerator.h  internal_temporary_buffer.h  intrinsics.h  io_deco_ref.h  io_ref.h  iso6709.h  istring_view.h  line_generator.h  local_new_array_ptr.h  malformed_input.h  mode.h  ospan.h  overflow.h  parse_code.h  perms.h  posix_error_scatter.h  print_freestanding.h  print_reserver.h  print_scan.h  random_access_transmit.h  read_all.h  read_write_all.h  scan_freestanding.h  scan_generator.h  secure_clear_guard.h  seek.h  skip.h  (+14 more)
include/fast_io_crypto/: gmac.h
include/fast_io_driver/: boost_iostreams.h  capstone.h  cppwinrt.h  cryptopp_driver.h  (+19 more)
man/: concat.3  native_file.3  open_mode.3  print.3
(+790 files in other folders)
