cmake_minimum_required(VERSION 3.15)

project(fast_io)

if ("${CMAKE_CXX_COMPILER_ID}" STREQUAL "MSVC")
	# using Visual Studio C++
add_definitions(/experimental:concepts /MD /source-charset:utf-8)
#if ("${CMAKE_CXX_COMPILER_ID}" STREQUAL "Intel")
elseif(CMAKE_CXX_COMPILER_ID STREQUAL "GNU")
set(CMAKE_C_FLAGS_RELEASE "${CMAKE_C_FLAGS_RELEASE} -s")
set(CMAKE_CXX_FLAGS_RELEASE "${CMAKE_CXX_FLAGS_RELEASE} -s")
add_definitions(-ffast-math -Wall -Wextra)
elseif ("${CMAKE_CXX_COMPILER_ID}" STREQUAL "Clang")
set(CMAKE_C_FLAGS_RELEASE "${CMAKE_C_FLAGS_RELEASE} -s")
set(CMAKE_CXX_FLAGS_RELEASE "${CMAKE_CXX_FLAGS_RELEASE} -s")
add_definitions(-Xclang -fconcepts-ts -ffast-math)
endif()

set(CMAKE_CXX_STANDARD 20)
set(CMAKE_INTERPROCEDURAL_OPTIMIZATION TRUE)
set(BUILD_STATIC_LIBS OFF)


set(CMAKE_SHARED_LIBRARY_PREFIX "")
set(CMAKE_STATIC_LIBRARY_PREFIX "")
add_library(aa_DJ SHARED src/i18n_data/locale/aa_DJ.cc)
add_library(aa_ER SHARED src/i18n_data/locale/aa_ER.cc)
add_library(aa_ER_saaho SHARED src/i18n_data/locale/aa_ER@saaho.cc)
set_target_properties(aa_ER_saaho PROPERTIES OUTPUT_NAME aa_ER@saaho)
add_library(aa_ET SHARED src/i18n_data/locale/aa_ET.cc)
add_library(af_ZA SHARED src/i18n_data/locale/af_ZA.cc)
add_library(agr_PE SHARED src/i18n_data/locale/agr_PE.cc)
add_library(ak_GH SHARED src/i18n_data/locale/ak_GH.cc)
add_library(am_ET SHARED src/i18n_data/locale/am_ET.cc)
add_library(anp_IN SHARED src/i18n_data/locale/anp_IN.cc)
add_library(an_ES SHARED src/i18n_data/locale/an_ES.cc)
add_library(ar_AE SHARED src/i18n_data/locale/ar_AE.cc)
add_library(ar_BH SHARED src/i18n_data/locale/ar_BH.cc)
add_library(ar_DZ SHARED src/i18n_data/locale/ar_DZ.cc)
add_library(ar_EG SHARED src/i18n_data/locale/ar_EG.cc)
add_library(ar_IN SHARED src/i18n_data/locale/ar_IN.cc)
add_library(ar_IQ SHARED src/i18n_data/locale/ar_IQ.cc)
add_library(ar_JO SHARED src/i18n_data/locale/ar_JO.cc)
add_library(ar_KW SHARED src/i18n_data/locale/ar_KW.cc)
add_library(ar_LB SHARED src/i18n_data/locale/ar_LB.cc)
add_library(ar_LY SHARED src/i18n_data/locale/ar_LY.cc)
add_library(ar_MA SHARED src/i18n_data/locale/ar_MA.cc)
add_library(ar_OM SHARED src/i18n_data/locale/ar_OM.cc)
add_library(ar_QA SHARED src/i18n_data/locale/ar_QA.cc)
add_library(ar_SA SHARED src/i18n_data/locale/ar_SA.cc)
add_library(ar_SD SHARED src/i18n_data/locale/ar_SD.cc)
add_library(ar_SS SHARED src/i18n_data/locale/ar_SS.cc)
add_library(ar_SY SHARED src/i18n_data/locale/ar_SY.cc)
add_library(ar_TN SHARED src/i18n_data/locale/ar_TN.cc)
add_library(ar_YE SHARED src/i18n_data/locale/ar_YE.cc)
add_library(ast_ES SHARED src/i18n_data/locale/ast_ES.cc)
add_library(as_IN SHARED src/i18n_data/locale/as_IN.cc)
add_library(ayc_PE SHARED src/i18n_data/locale/ayc_PE.cc)
add_library(az_AZ SHARED src/i18n_data/locale/az_AZ.cc)
add_library(az_IR SHARED src/i18n_data/locale/az_IR.cc)
add_library(bem_ZM SHARED src/i18n_data/locale/bem_ZM.cc)
add_library(ber_DZ SHARED src/i18n_data/locale/ber_DZ.cc)
add_library(ber_MA SHARED src/i18n_data/locale/ber_MA.cc)
add_library(be_BY SHARED src/i18n_data/locale/be_BY.cc)
add_library(be_BY_latin SHARED src/i18n_data/locale/be_BY@latin.cc)
set_target_properties(be_BY_latin PROPERTIES OUTPUT_NAME be_BY@latin)
add_library(bg_BG SHARED src/i18n_data/locale/bg_BG.cc)
add_library(bhb_IN SHARED src/i18n_data/locale/bhb_IN.cc)
add_library(bho_IN SHARED src/i18n_data/locale/bho_IN.cc)
add_library(bho_NP SHARED src/i18n_data/locale/bho_NP.cc)
add_library(bi_VU SHARED src/i18n_data/locale/bi_VU.cc)
add_library(bn_BD SHARED src/i18n_data/locale/bn_BD.cc)
add_library(bn_IN SHARED src/i18n_data/locale/bn_IN.cc)
add_library(bo_CN SHARED src/i18n_data/locale/bo_CN.cc)
add_library(bo_IN SHARED src/i18n_data/locale/bo_IN.cc)
add_library(brx_IN SHARED src/i18n_data/locale/brx_IN.cc)
add_library(br_FR SHARED src/i18n_data/locale/br_FR.cc)
add_library(br_FR_euro SHARED src/i18n_data/locale/br_FR@euro.cc)
set_target_properties(br_FR_euro PROPERTIES OUTPUT_NAME br_FR@euro)
add_library(bs_BA SHARED src/i18n_data/locale/bs_BA.cc)
add_library(byn_ER SHARED src/i18n_data/locale/byn_ER.cc)
add_library(ca_AD SHARED src/i18n_data/locale/ca_AD.cc)
add_library(ca_ES SHARED src/i18n_data/locale/ca_ES.cc)
add_library(ca_ES_euro SHARED src/i18n_data/locale/ca_ES@euro.cc)
set_target_properties(ca_ES_euro PROPERTIES OUTPUT_NAME ca_ES@euro)
add_library(ca_ES_valencia SHARED src/i18n_data/locale/ca_ES@valencia.cc)
set_target_properties(ca_ES_valencia PROPERTIES OUTPUT_NAME ca_ES@valencia)
add_library(ca_FR SHARED src/i18n_data/locale/ca_FR.cc)
add_library(ca_IT SHARED src/i18n_data/locale/ca_IT.cc)
add_library(ce_RU SHARED src/i18n_data/locale/ce_RU.cc)
add_library(chr_US SHARED src/i18n_data/locale/chr_US.cc)
add_library(ckb_IQ SHARED src/i18n_data/locale/ckb_IQ.cc)
add_library(cmn_TW SHARED src/i18n_data/locale/cmn_TW.cc)
add_library(crh_UA SHARED src/i18n_data/locale/crh_UA.cc)
add_library(csb_PL SHARED src/i18n_data/locale/csb_PL.cc)
add_library(cs_CZ SHARED src/i18n_data/locale/cs_CZ.cc)
add_library(cv_RU SHARED src/i18n_data/locale/cv_RU.cc)
add_library(cy_GB SHARED src/i18n_data/locale/cy_GB.cc)
add_library(da_DK SHARED src/i18n_data/locale/da_DK.cc)
add_library(de_AT SHARED src/i18n_data/locale/de_AT.cc)
add_library(de_AT_euro SHARED src/i18n_data/locale/de_AT@euro.cc)
set_target_properties(de_AT_euro PROPERTIES OUTPUT_NAME de_AT@euro)
add_library(de_BE SHARED src/i18n_data/locale/de_BE.cc)
add_library(de_BE_euro SHARED src/i18n_data/locale/de_BE@euro.cc)
set_target_properties(de_BE_euro PROPERTIES OUTPUT_NAME de_BE@euro)
add_library(de_CH SHARED src/i18n_data/locale/de_CH.cc)
add_library(de_DE SHARED src/i18n_data/locale/de_DE.cc)
add_library(de_DE_euro SHARED src/i18n_data/locale/de_DE@euro.cc)
set_target_properties(de_DE_euro PROPERTIES OUTPUT_NAME de_DE@euro)
add_library(de_IT SHARED src/i18n_data/locale/de_IT.cc)
add_library(de_LI SHARED src/i18n_data/locale/de_LI.cc)
add_library(de_LU SHARED src/i18n_data/locale/de_LU.cc)
add_library(de_LU_euro SHARED src/i18n_data/locale/de_LU@euro.cc)
set_target_properties(de_LU_euro PROPERTIES OUTPUT_NAME de_LU@euro)
add_library(doi_IN SHARED src/i18n_data/locale/doi_IN.cc)
add_library(dsb_DE SHARED src/i18n_data/locale/dsb_DE.cc)
add_library(dv_MV SHARED src/i18n_data/locale/dv_MV.cc)
add_library(dz_BT SHARED src/i18n_data/locale/dz_BT.cc)
add_library(el_CY SHARED src/i18n_data/locale/el_CY.cc)
add_library(el_GR SHARED src/i18n_data/locale/el_GR.cc)
add_library(el_GR_euro SHARED src/i18n_data/locale/el_GR@euro.cc)
set_target_properties(el_GR_euro PROPERTIES OUTPUT_NAME el_GR@euro)
add_library(en_AG SHARED src/i18n_data/locale/en_AG.cc)
add_library(en_AU SHARED src/i18n_data/locale/en_AU.cc)
add_library(en_BW SHARED src/i18n_data/locale/en_BW.cc)
add_library(en_CA SHARED src/i18n_data/locale/en_CA.cc)
add_library(en_DK SHARED src/i18n_data/locale/en_DK.cc)
add_library(en_GB SHARED src/i18n_data/locale/en_GB.cc)
add_library(en_HK SHARED src/i18n_data/locale/en_HK.cc)
add_library(en_IE SHARED src/i18n_data/locale/en_IE.cc)
add_library(en_IE_euro SHARED src/i18n_data/locale/en_IE@euro.cc)
set_target_properties(en_IE_euro PROPERTIES OUTPUT_NAME en_IE@euro)
add_library(en_IL SHARED src/i18n_data/locale/en_IL.cc)
add_library(en_IN SHARED src/i18n_data/locale/en_IN.cc)
add_library(en_NG SHARED src/i18n_data/locale/en_NG.cc)
add_library(en_NZ SHARED src/i18n_data/locale/en_NZ.cc)
add_library(en_PH SHARED src/i18n_data/locale/en_PH.cc)
add_library(en_SC SHARED src/i18n_data/locale/en_SC.cc)
add_library(en_SG SHARED src/i18n_data/locale/en_SG.cc)
add_library(en_US SHARED src/i18n_data/locale/en_US.cc)
add_library(en_ZA SHARED src/i18n_data/locale/en_ZA.cc)
add_library(en_ZM SHARED src/i18n_data/locale/en_ZM.cc)
add_library(en_ZW SHARED src/i18n_data/locale/en_ZW.cc)
add_library(eo SHARED src/i18n_data/locale/eo.cc)
add_library(es_AR SHARED src/i18n_data/locale/es_AR.cc)
add_library(es_BO SHARED src/i18n_data/locale/es_BO.cc)
add_library(es_CL SHARED src/i18n_data/locale/es_CL.cc)
add_library(es_CO SHARED src/i18n_data/locale/es_CO.cc)
add_library(es_CR SHARED src/i18n_data/locale/es_CR.cc)
add_library(es_CU SHARED src/i18n_data/locale/es_CU.cc)
add_library(es_DO SHARED src/i18n_data/locale/es_DO.cc)
add_library(es_EC SHARED src/i18n_data/locale/es_EC.cc)
add_library(es_ES SHARED src/i18n_data/locale/es_ES.cc)
add_library(es_ES_euro SHARED src/i18n_data/locale/es_ES@euro.cc)
set_target_properties(es_ES_euro PROPERTIES OUTPUT_NAME es_ES@euro)
add_library(es_GT SHARED src/i18n_data/locale/es_GT.cc)
add_library(es_HN SHARED src/i18n_data/locale/es_HN.cc)
add_library(es_MX SHARED src/i18n_data/locale/es_MX.cc)
add_library(es_NI SHARED src/i18n_data/locale/es_NI.cc)
add_library(es_PA SHARED src/i18n_data/locale/es_PA.cc)
add_library(es_PE SHARED src/i18n_data/locale/es_PE.cc)
add_library(es_PR SHARED src/i18n_data/locale/es_PR.cc)
add_library(es_PY SHARED src/i18n_data/locale/es_PY.cc)
add_library(es_SV SHARED src/i18n_data/locale/es_SV.cc)
add_library(es_US SHARED src/i18n_data/locale/es_US.cc)
add_library(es_UY SHARED src/i18n_data/locale/es_UY.cc)
add_library(es_VE SHARED src/i18n_data/locale/es_VE.cc)
add_library(et_EE SHARED src/i18n_data/locale/et_EE.cc)
add_library(eu_ES SHARED src/i18n_data/locale/eu_ES.cc)
add_library(eu_ES_euro SHARED src/i18n_data/locale/eu_ES@euro.cc)
set_target_properties(eu_ES_euro PROPERTIES OUTPUT_NAME eu_ES@euro)
add_library(fa_IR SHARED src/i18n_data/locale/fa_IR.cc)
add_library(ff_SN SHARED src/i18n_data/locale/ff_SN.cc)
add_library(fil_PH SHARED src/i18n_data/locale/fil_PH.cc)
add_library(fi_FI SHARED src/i18n_data/locale/fi_FI.cc)
add_library(fi_FI_euro SHARED src/i18n_data/locale/fi_FI@euro.cc)
set_target_properties(fi_FI_euro PROPERTIES OUTPUT_NAME fi_FI@euro)
add_library(fo_FO SHARED src/i18n_data/locale/fo_FO.cc)
add_library(fr_BE SHARED src/i18n_data/locale/fr_BE.cc)
add_library(fr_BE_euro SHARED src/i18n_data/locale/fr_BE@euro.cc)
set_target_properties(fr_BE_euro PROPERTIES OUTPUT_NAME fr_BE@euro)
add_library(fr_CA SHARED src/i18n_data/locale/fr_CA.cc)
add_library(fr_CH SHARED src/i18n_data/locale/fr_CH.cc)
add_library(fr_FR SHARED src/i18n_data/locale/fr_FR.cc)
add_library(fr_FR_euro SHARED src/i18n_data/locale/fr_FR@euro.cc)
set_target_properties(fr_FR_euro PROPERTIES OUTPUT_NAME fr_FR@euro)
add_library(fr_LU SHARED src/i18n_data/locale/fr_LU.cc)
add_library(fr_LU_euro SHARED src/i18n_data/locale/fr_LU@euro.cc)
set_target_properties(fr_LU_euro PROPERTIES OUTPUT_NAME fr_LU@euro)
add_library(fur_IT SHARED src/i18n_data/locale/fur_IT.cc)
add_library(fy_DE SHARED src/i18n_data/locale/fy_DE.cc)
add_library(fy_NL SHARED src/i18n_data/locale/fy_NL.cc)
add_library(ga_IE SHARED src/i18n_data/locale/ga_IE.cc)
add_library(ga_IE_euro SHARED src/i18n_data/locale/ga_IE@euro.cc)
set_target_properties(ga_IE_euro PROPERTIES OUTPUT_NAME ga_IE@euro)
add_library(gd_GB SHARED src/i18n_data/locale/gd_GB.cc)
add_library(gez_ER SHARED src/i18n_data/locale/gez_ER.cc)
add_library(gez_ER_abegede SHARED src/i18n_data/locale/gez_ER@abegede.cc)
set_target_properties(gez_ER_abegede PROPERTIES OUTPUT_NAME gez_ER@abegede)
add_library(gez_ET SHARED src/i18n_data/locale/gez_ET.cc)
add_library(gez_ET_abegede SHARED src/i18n_data/locale/gez_ET@abegede.cc)
set_target_properties(gez_ET_abegede PROPERTIES OUTPUT_NAME gez_ET@abegede)
add_library(gl_ES SHARED src/i18n_data/locale/gl_ES.cc)
add_library(gl_ES_euro SHARED src/i18n_data/locale/gl_ES@euro.cc)
set_target_properties(gl_ES_euro PROPERTIES OUTPUT_NAME gl_ES@euro)
add_library(gu_IN SHARED src/i18n_data/locale/gu_IN.cc)
add_library(gv_GB SHARED src/i18n_data/locale/gv_GB.cc)
add_library(hak_TW SHARED src/i18n_data/locale/hak_TW.cc)
add_library(ha_NG SHARED src/i18n_data/locale/ha_NG.cc)
add_library(he_IL SHARED src/i18n_data/locale/he_IL.cc)
add_library(hif_FJ SHARED src/i18n_data/locale/hif_FJ.cc)
add_library(hi_IN SHARED src/i18n_data/locale/hi_IN.cc)
add_library(hne_IN SHARED src/i18n_data/locale/hne_IN.cc)
add_library(hr_HR SHARED src/i18n_data/locale/hr_HR.cc)
add_library(hsb_DE SHARED src/i18n_data/locale/hsb_DE.cc)
add_library(ht_HT SHARED src/i18n_data/locale/ht_HT.cc)
add_library(hu_HU SHARED src/i18n_data/locale/hu_HU.cc)
add_library(hy_AM SHARED src/i18n_data/locale/hy_AM.cc)
add_library(i18n SHARED src/i18n_data/locale/i18n.cc)
add_library(ia_FR SHARED src/i18n_data/locale/ia_FR.cc)
add_library(id_ID SHARED src/i18n_data/locale/id_ID.cc)
add_library(ig_NG SHARED src/i18n_data/locale/ig_NG.cc)
add_library(ik_CA SHARED src/i18n_data/locale/ik_CA.cc)
add_library(is_IS SHARED src/i18n_data/locale/is_IS.cc)
add_library(it_CH SHARED src/i18n_data/locale/it_CH.cc)
add_library(it_IT SHARED src/i18n_data/locale/it_IT.cc)
add_library(it_IT_euro SHARED src/i18n_data/locale/it_IT@euro.cc)
set_target_properties(it_IT_euro PROPERTIES OUTPUT_NAME it_IT@euro)
add_library(iu_CA SHARED src/i18n_data/locale/iu_CA.cc)
add_library(ja_JP SHARED src/i18n_data/locale/ja_JP.cc)
add_library(kab_DZ SHARED src/i18n_data/locale/kab_DZ.cc)
add_library(ka_GE SHARED src/i18n_data/locale/ka_GE.cc)
add_library(kk_KZ SHARED src/i18n_data/locale/kk_KZ.cc)
add_library(kl_GL SHARED src/i18n_data/locale/kl_GL.cc)
add_library(km_KH SHARED src/i18n_data/locale/km_KH.cc)
add_library(kn_IN SHARED src/i18n_data/locale/kn_IN.cc)
add_library(kok_IN SHARED src/i18n_data/locale/kok_IN.cc)
add_library(ko_KR SHARED src/i18n_data/locale/ko_KR.cc)
add_library(ks_IN SHARED src/i18n_data/locale/ks_IN.cc)
add_library(ks_IN_devanagari SHARED src/i18n_data/locale/ks_IN@devanagari.cc)
set_target_properties(ks_IN_devanagari PROPERTIES OUTPUT_NAME ks_IN@devanagari)
add_library(ku_TR SHARED src/i18n_data/locale/ku_TR.cc)
add_library(kw_GB SHARED src/i18n_data/locale/kw_GB.cc)
add_library(ky_KG SHARED src/i18n_data/locale/ky_KG.cc)
add_library(lb_LU SHARED src/i18n_data/locale/lb_LU.cc)
add_library(lg_UG SHARED src/i18n_data/locale/lg_UG.cc)
add_library(lij_IT SHARED src/i18n_data/locale/lij_IT.cc)
add_library(li_BE SHARED src/i18n_data/locale/li_BE.cc)
add_library(li_NL SHARED src/i18n_data/locale/li_NL.cc)
add_library(ln_CD SHARED src/i18n_data/locale/ln_CD.cc)
add_library(lo_LA SHARED src/i18n_data/locale/lo_LA.cc)
add_library(lt_LT SHARED src/i18n_data/locale/lt_LT.cc)
add_library(lv_LV SHARED src/i18n_data/locale/lv_LV.cc)
add_library(lzh_TW SHARED src/i18n_data/locale/lzh_TW.cc)
add_library(mag_IN SHARED src/i18n_data/locale/mag_IN.cc)
add_library(mai_IN SHARED src/i18n_data/locale/mai_IN.cc)
add_library(mai_NP SHARED src/i18n_data/locale/mai_NP.cc)
add_library(mfe_MU SHARED src/i18n_data/locale/mfe_MU.cc)
add_library(mg_MG SHARED src/i18n_data/locale/mg_MG.cc)
add_library(mhr_RU SHARED src/i18n_data/locale/mhr_RU.cc)
add_library(miq_NI SHARED src/i18n_data/locale/miq_NI.cc)
add_library(mi_NZ SHARED src/i18n_data/locale/mi_NZ.cc)
add_library(mjw_IN SHARED src/i18n_data/locale/mjw_IN.cc)
add_library(mk_MK SHARED src/i18n_data/locale/mk_MK.cc)
add_library(ml_IN SHARED src/i18n_data/locale/ml_IN.cc)
add_library(mni_IN SHARED src/i18n_data/locale/mni_IN.cc)
add_library(mnw_MM SHARED src/i18n_data/locale/mnw_MM.cc)
add_library(mn_MN SHARED src/i18n_data/locale/mn_MN.cc)
add_library(mr_IN SHARED src/i18n_data/locale/mr_IN.cc)
add_library(ms_MY SHARED src/i18n_data/locale/ms_MY.cc)
add_library(mt_MT SHARED src/i18n_data/locale/mt_MT.cc)
add_library(my_MM SHARED src/i18n_data/locale/my_MM.cc)
add_library(nan_TW SHARED src/i18n_data/locale/nan_TW.cc)
add_library(nan_TW_latin SHARED src/i18n_data/locale/nan_TW@latin.cc)
set_target_properties(nan_TW_latin PROPERTIES OUTPUT_NAME nan_TW@latin)
add_library(nb_NO SHARED src/i18n_data/locale/nb_NO.cc)
add_library(nds_DE SHARED src/i18n_data/locale/nds_DE.cc)
add_library(nds_NL SHARED src/i18n_data/locale/nds_NL.cc)
add_library(ne_NP SHARED src/i18n_data/locale/ne_NP.cc)
add_library(nhn_MX SHARED src/i18n_data/locale/nhn_MX.cc)
add_library(niu_NU SHARED src/i18n_data/locale/niu_NU.cc)
add_library(niu_NZ SHARED src/i18n_data/locale/niu_NZ.cc)
add_library(nl_AW SHARED src/i18n_data/locale/nl_AW.cc)
add_library(nl_BE SHARED src/i18n_data/locale/nl_BE.cc)
add_library(nl_BE_euro SHARED src/i18n_data/locale/nl_BE@euro.cc)
set_target_properties(nl_BE_euro PROPERTIES OUTPUT_NAME nl_BE@euro)
add_library(nl_NL SHARED src/i18n_data/locale/nl_NL.cc)
add_library(nl_NL_euro SHARED src/i18n_data/locale/nl_NL@euro.cc)
set_target_properties(nl_NL_euro PROPERTIES OUTPUT_NAME nl_NL@euro)
add_library(nn_NO SHARED src/i18n_data/locale/nn_NO.cc)
add_library(nr_ZA SHARED src/i18n_data/locale/nr_ZA.cc)
add_library(nso_ZA SHARED src/i18n_data/locale/nso_ZA.cc)
add_library(oc_FR SHARED src/i18n_data/locale/oc_FR.cc)
add_library(om_ET SHARED src/i18n_data/locale/om_ET.cc)
add_library(om_KE SHARED src/i18n_data/locale/om_KE.cc)
add_library(or_IN SHARED src/i18n_data/locale/or_IN.cc)
add_library(os_RU SHARED src/i18n_data/locale/os_RU.cc)
add_library(pap_AW SHARED src/i18n_data/locale/pap_AW.cc)
add_library(pap_CW SHARED src/i18n_data/locale/pap_CW.cc)
add_library(pa_IN SHARED src/i18n_data/locale/pa_IN.cc)
add_library(pa_PK SHARED src/i18n_data/locale/pa_PK.cc)
add_library(pl_PL SHARED src/i18n_data/locale/pl_PL.cc)
add_library(POSIX SHARED src/i18n_data/locale/POSIX.cc)
add_library(ps_AF SHARED src/i18n_data/locale/ps_AF.cc)
add_library(pt_BR SHARED src/i18n_data/locale/pt_BR.cc)
add_library(pt_PT SHARED src/i18n_data/locale/pt_PT.cc)
add_library(pt_PT_euro SHARED src/i18n_data/locale/pt_PT@euro.cc)
set_target_properties(pt_PT_euro PROPERTIES OUTPUT_NAME pt_PT@euro)
add_library(quz_PE SHARED src/i18n_data/locale/quz_PE.cc)
add_library(raj_IN SHARED src/i18n_data/locale/raj_IN.cc)
add_library(ro_RO SHARED src/i18n_data/locale/ro_RO.cc)
add_library(ru_RU SHARED src/i18n_data/locale/ru_RU.cc)
add_library(ru_UA SHARED src/i18n_data/locale/ru_UA.cc)
add_library(rw_RW SHARED src/i18n_data/locale/rw_RW.cc)
add_library(sah_RU SHARED src/i18n_data/locale/sah_RU.cc)
add_library(sat_IN SHARED src/i18n_data/locale/sat_IN.cc)
add_library(sa_IN SHARED src/i18n_data/locale/sa_IN.cc)
add_library(sc_IT SHARED src/i18n_data/locale/sc_IT.cc)
add_library(sd_IN SHARED src/i18n_data/locale/sd_IN.cc)
add_library(sd_IN_devanagari SHARED src/i18n_data/locale/sd_IN@devanagari.cc)
set_target_properties(sd_IN_devanagari PROPERTIES OUTPUT_NAME sd_IN@devanagari)
add_library(se_NO SHARED src/i18n_data/locale/se_NO.cc)
add_library(sgs_LT SHARED src/i18n_data/locale/sgs_LT.cc)
add_library(shn_MM SHARED src/i18n_data/locale/shn_MM.cc)
add_library(shs_CA SHARED src/i18n_data/locale/shs_CA.cc)
add_library(sid_ET SHARED src/i18n_data/locale/sid_ET.cc)
add_library(si_LK SHARED src/i18n_data/locale/si_LK.cc)
add_library(sk_SK SHARED src/i18n_data/locale/sk_SK.cc)
add_library(sl_SI SHARED src/i18n_data/locale/sl_SI.cc)
add_library(sm_WS SHARED src/i18n_data/locale/sm_WS.cc)
add_library(so_DJ SHARED src/i18n_data/locale/so_DJ.cc)
add_library(so_ET SHARED src/i18n_data/locale/so_ET.cc)
add_library(so_KE SHARED src/i18n_data/locale/so_KE.cc)
add_library(so_SO SHARED src/i18n_data/locale/so_SO.cc)
add_library(sq_AL SHARED src/i18n_data/locale/sq_AL.cc)
add_library(sq_MK SHARED src/i18n_data/locale/sq_MK.cc)
add_library(sr_ME SHARED src/i18n_data/locale/sr_ME.cc)
add_library(sr_RS SHARED src/i18n_data/locale/sr_RS.cc)
add_library(sr_RS_latin SHARED src/i18n_data/locale/sr_RS@latin.cc)
set_target_properties(sr_RS_latin PROPERTIES OUTPUT_NAME sr_RS@latin)
add_library(ss_ZA SHARED src/i18n_data/locale/ss_ZA.cc)
add_library(st_ZA SHARED src/i18n_data/locale/st_ZA.cc)
add_library(sv_FI SHARED src/i18n_data/locale/sv_FI.cc)
add_library(sv_FI_euro SHARED src/i18n_data/locale/sv_FI@euro.cc)
set_target_properties(sv_FI_euro PROPERTIES OUTPUT_NAME sv_FI@euro)
add_library(sv_SE SHARED src/i18n_data/locale/sv_SE.cc)
add_library(sw_KE SHARED src/i18n_data/locale/sw_KE.cc)
add_library(sw_TZ SHARED src/i18n_data/locale/sw_TZ.cc)
add_library(szl_PL SHARED src/i18n_data/locale/szl_PL.cc)
add_library(ta_IN SHARED src/i18n_data/locale/ta_IN.cc)
add_library(ta_LK SHARED src/i18n_data/locale/ta_LK.cc)
add_library(tcy_IN SHARED src/i18n_data/locale/tcy_IN.cc)
add_library(te_IN SHARED src/i18n_data/locale/te_IN.cc)
add_library(tg_TJ SHARED src/i18n_data/locale/tg_TJ.cc)
add_library(the_NP SHARED src/i18n_data/locale/the_NP.cc)
add_library(th_TH SHARED src/i18n_data/locale/th_TH.cc)
add_library(tig_ER SHARED src/i18n_data/locale/tig_ER.cc)
add_library(ti_ER SHARED src/i18n_data/locale/ti_ER.cc)
add_library(ti_ET SHARED src/i18n_data/locale/ti_ET.cc)
add_library(tk_TM SHARED src/i18n_data/locale/tk_TM.cc)
add_library(tl_PH SHARED src/i18n_data/locale/tl_PH.cc)
add_library(tn_ZA SHARED src/i18n_data/locale/tn_ZA.cc)
add_library(to_TO SHARED src/i18n_data/locale/to_TO.cc)
add_library(tpi_PG SHARED src/i18n_data/locale/tpi_PG.cc)
add_library(tr_CY SHARED src/i18n_data/locale/tr_CY.cc)
add_library(tr_TR SHARED src/i18n_data/locale/tr_TR.cc)
add_library(ts_ZA SHARED src/i18n_data/locale/ts_ZA.cc)
add_library(tt_RU SHARED src/i18n_data/locale/tt_RU.cc)
add_library(tt_RU_iqtelif SHARED src/i18n_data/locale/tt_RU@iqtelif.cc)
set_target_properties(tt_RU_iqtelif PROPERTIES OUTPUT_NAME tt_RU@iqtelif)
add_library(ug_CN SHARED src/i18n_data/locale/ug_CN.cc)
add_library(uk_UA SHARED src/i18n_data/locale/uk_UA.cc)
add_library(unm_US SHARED src/i18n_data/locale/unm_US.cc)
add_library(ur_IN SHARED src/i18n_data/locale/ur_IN.cc)
add_library(ur_PK SHARED src/i18n_data/locale/ur_PK.cc)
add_library(uz_UZ SHARED src/i18n_data/locale/uz_UZ.cc)
add_library(uz_UZ_cyrillic SHARED src/i18n_data/locale/uz_UZ@cyrillic.cc)
set_target_properties(uz_UZ_cyrillic PROPERTIES OUTPUT_NAME uz_UZ@cyrillic)
add_library(ve_ZA SHARED src/i18n_data/locale/ve_ZA.cc)
add_library(vi_VN SHARED src/i18n_data/locale/vi_VN.cc)
add_library(wae_CH SHARED src/i18n_data/locale/wae_CH.cc)
add_library(wal_ET SHARED src/i18n_data/locale/wal_ET.cc)
add_library(wa_BE SHARED src/i18n_data/locale/wa_BE.cc)
add_library(wa_BE_euro SHARED src/i18n_data/locale/wa_BE@euro.cc)
set_target_properties(wa_BE_euro PROPERTIES OUTPUT_NAME wa_BE@euro)
add_library(wo_SN SHARED src/i18n_data/locale/wo_SN.cc)
add_library(xh_ZA SHARED src/i18n_data/locale/xh_ZA.cc)
add_library(yi_US SHARED src/i18n_data/locale/yi_US.cc)
add_library(yo_NG SHARED src/i18n_data/locale/yo_NG.cc)
add_library(yue_HK SHARED src/i18n_data/locale/yue_HK.cc)
add_library(yuw_PG SHARED src/i18n_data/locale/yuw_PG.cc)
add_library(zh_CN SHARED src/i18n_data/locale/zh_CN.cc)
add_library(zh_HK SHARED src/i18n_data/locale/zh_HK.cc)
add_library(zh_SG SHARED src/i18n_data/locale/zh_SG.cc)
add_library(zh_TW SHARED src/i18n_data/locale/zh_TW.cc)
add_library(zu_ZA SHARED src/i18n_data/locale/zu_ZA.cc)


INSTALL (DIRECTORY ${CMAKE_SOURCE_DIR}/include/ DESTINATION include)
INSTALL (DIRECTORY ${CMAKE_SOURCE_DIR}/man/ DESTINATION man/man3)

install(TARGETS aa_DJ LIBRARY DESTINATION lib/fast_io_i18n_data/locale)
install(TARGETS aa_ER LIBRARY DESTINATION lib/fast_io_i18n_data/locale)
install(TARGETS aa_ER_saaho LIBRARY DESTINATION lib/fast_io_i18n_data/locale)
install(TARGETS aa_ET LIBRARY DESTINATION lib/fast_io_i18n_data/locale)
install(TARGETS af_ZA LIBRARY DESTINATION lib/fast_io_i18n_data/locale)
install(TARGETS agr_PE LIBRARY DESTINATION lib/fast_io_i18n_data/locale)
install(TARGETS ak_GH LIBRARY DESTINATION lib/fast_io_i18n_data/locale)
install(TARGETS am_ET LIBRARY DESTINATION lib/fast_io_i18n_data/locale)
install(TARGETS anp_IN LIBRARY DESTINATION lib/fast_io_i18n_data/locale)
install(TARGETS an_ES LIBRARY DESTINATION lib/fast_io_i18n_data/locale)
install(TARGETS ar_AE LIBRARY DESTINATION lib/fast_io_i18n_data/locale)
install(TARGETS ar_BH LIBRARY DESTINATION lib/fast_io_i18n_data/locale)
install(TARGETS ar_DZ LIBRARY DESTINATION lib/fast_io_i18n_data/locale)
install(TARGETS ar_EG LIBRARY DESTINATION lib/fast_io_i18n_data/locale)
install(TARGETS ar_IN LIBRARY DESTINATION lib/fast_io_i18n_data/locale)
install(TARGETS ar_IQ LIBRARY DESTINATION lib/fast_io_i18n_data/locale)
install(TARGETS ar_JO LIBRARY DESTINATION lib/fast_io_i18n_data/locale)
install(TARGETS ar_KW LIBRARY DESTINATION lib/fast_io_i18n_data/locale)
install(TARGETS ar_LB LIBRARY DESTINATION lib/fast_io_i18n_data/locale)
install(TARGETS ar_LY LIBRARY DESTINATION lib/fast_io_i18n_data/locale)
install(TARGETS ar_MA LIBRARY DESTINATION lib/fast_io_i18n_data/locale)
install(TARGETS ar_OM LIBRARY DESTINATION lib/fast_io_i18n_data/locale)
install(TARGETS ar_QA LIBRARY DESTINATION lib/fast_io_i18n_data/locale)
install(TARGETS ar_SA LIBRARY DESTINATION lib/fast_io_i18n_data/locale)
install(TARGETS ar_SD LIBRARY DESTINATION lib/fast_io_i18n_data/locale)
install(TARGETS ar_SS LIBRARY DESTINATION lib/fast_io_i18n_data/locale)
install(TARGETS ar_SY LIBRARY DESTINATION lib/fast_io_i18n_data/locale)
install(TARGETS ar_TN LIBRARY DESTINATION lib/fast_io_i18n_data/locale)
install(TARGETS ar_YE LIBRARY DESTINATION lib/fast_io_i18n_data/locale)
install(TARGETS ast_ES LIBRARY DESTINATION lib/fast_io_i18n_data/locale)
install(TARGETS as_IN LIBRARY DESTINATION lib/fast_io_i18n_data/locale)
install(TARGETS ayc_PE LIBRARY DESTINATION lib/fast_io_i18n_data/locale)
install(TARGETS az_AZ LIBRARY DESTINATION lib/fast_io_i18n_data/locale)
install(TARGETS az_IR LIBRARY DESTINATION lib/fast_io_i18n_data/locale)
install(TARGETS bem_ZM LIBRARY DESTINATION lib/fast_io_i18n_data/locale)
install(TARGETS ber_DZ LIBRARY DESTINATION lib/fast_io_i18n_data/locale)
install(TARGETS ber_MA LIBRARY DESTINATION lib/fast_io_i18n_data/locale)
install(TARGETS be_BY LIBRARY DESTINATION lib/fast_io_i18n_data/locale)
install(TARGETS be_BY_latin LIBRARY DESTINATION lib/fast_io_i18n_data/locale)
install(TARGETS bg_BG LIBRARY DESTINATION lib/fast_io_i18n_data/locale)
install(TARGETS bhb_IN LIBRARY DESTINATION lib/fast_io_i18n_data/locale)
install(TARGETS bho_IN LIBRARY DESTINATION lib/fast_io_i18n_data/locale)
install(TARGETS bho_NP LIBRARY DESTINATION lib/fast_io_i18n_data/locale)
install(TARGETS bi_VU LIBRARY DESTINATION lib/fast_io_i18n_data/locale)
install(TARGETS bn_BD LIBRARY DESTINATION lib/fast_io_i18n_data/locale)
install(TARGETS bn_IN LIBRARY DESTINATION lib/fast_io_i18n_data/locale)
install(TARGETS bo_CN LIBRARY DESTINATION lib/fast_io_i18n_data/locale)
install(TARGETS bo_IN LIBRARY DESTINATION lib/fast_io_i18n_data/locale)
install(TARGETS brx_IN LIBRARY DESTINATION lib/fast_io_i18n_data/locale)
install(TARGETS br_FR LIBRARY DESTINATION lib/fast_io_i18n_data/locale)
install(TARGETS br_FR_euro LIBRARY DESTINATION lib/fast_io_i18n_data/locale)
install(TARGETS bs_BA LIBRARY DESTINATION lib/fast_io_i18n_data/locale)
install(TARGETS byn_ER LIBRARY DESTINATION lib/fast_io_i18n_data/locale)
install(TARGETS ca_AD LIBRARY DESTINATION lib/fast_io_i18n_data/locale)
install(TARGETS ca_ES LIBRARY DESTINATION lib/fast_io_i18n_data/locale)
install(TARGETS ca_ES_euro LIBRARY DESTINATION lib/fast_io_i18n_data/locale)
install(TARGETS ca_ES_valencia LIBRARY DESTINATION lib/fast_io_i18n_data/locale)
install(TARGETS ca_FR LIBRARY DESTINATION lib/fast_io_i18n_data/locale)
install(TARGETS ca_IT LIBRARY DESTINATION lib/fast_io_i18n_data/locale)
install(TARGETS ce_RU LIBRARY DESTINATION lib/fast_io_i18n_data/locale)
install(TARGETS chr_US LIBRARY DESTINATION lib/fast_io_i18n_data/locale)
install(TARGETS ckb_IQ LIBRARY DESTINATION lib/fast_io_i18n_data/locale)
install(TARGETS cmn_TW LIBRARY DESTINATION lib/fast_io_i18n_data/locale)
install(TARGETS crh_UA LIBRARY DESTINATION lib/fast_io_i18n_data/locale)
install(TARGETS csb_PL LIBRARY DESTINATION lib/fast_io_i18n_data/locale)
install(TARGETS cs_CZ LIBRARY DESTINATION lib/fast_io_i18n_data/locale)
install(TARGETS cv_RU LIBRARY DESTINATION lib/fast_io_i18n_data/locale)
install(TARGETS cy_GB LIBRARY DESTINATION lib/fast_io_i18n_data/locale)
install(TARGETS da_DK LIBRARY DESTINATION lib/fast_io_i18n_data/locale)
install(TARGETS de_AT LIBRARY DESTINATION lib/fast_io_i18n_data/locale)
install(TARGETS de_AT_euro LIBRARY DESTINATION lib/fast_io_i18n_data/locale)
install(TARGETS de_BE LIBRARY DESTINATION lib/fast_io_i18n_data/locale)
install(TARGETS de_BE_euro LIBRARY DESTINATION lib/fast_io_i18n_data/locale)
install(TARGETS de_CH LIBRARY DESTINATION lib/fast_io_i18n_data/locale)
install(TARGETS de_DE LIBRARY DESTINATION lib/fast_io_i18n_data/locale)
install(TARGETS de_DE_euro LIBRARY DESTINATION lib/fast_io_i18n_data/locale)
install(TARGETS de_IT LIBRARY DESTINATION lib/fast_io_i18n_data/locale)
install(TARGETS de_LI LIBRARY DESTINATION lib/fast_io_i18n_data/locale)
install(TARGETS de_LU LIBRARY DESTINATION lib/fast_io_i18n_data/locale)
install(TARGETS de_LU_euro LIBRARY DESTINATION lib/fast_io_i18n_data/locale)
install(TARGETS doi_IN LIBRARY DESTINATION lib/fast_io_i18n_data/locale)
install(TARGETS dsb_DE LIBRARY DESTINATION lib/fast_io_i18n_data/locale)
install(TARGETS dv_MV LIBRARY DESTINATION lib/fast_io_i18n_data/locale)
install(TARGETS dz_BT LIBRARY DESTINATION lib/fast_io_i18n_data/locale)
install(TARGETS el_CY LIBRARY DESTINATION lib/fast_io_i18n_data/locale)
install(TARGETS el_GR LIBRARY DESTINATION lib/fast_io_i18n_data/locale)
install(TARGETS el_GR_euro LIBRARY DESTINATION lib/fast_io_i18n_data/locale)
install(TARGETS en_AG LIBRARY DESTINATION lib/fast_io_i18n_data/locale)
install(TARGETS en_AU LIBRARY DESTINATION lib/fast_io_i18n_data/locale)
install(TARGETS en_BW LIBRARY DESTINATION lib/fast_io_i18n_data/locale)
install(TARGETS en_CA LIBRARY DESTINATION lib/fast_io_i18n_data/locale)
install(TARGETS en_DK LIBRARY DESTINATION lib/fast_io_i18n_data/locale)
install(TARGETS en_GB LIBRARY DESTINATION lib/fast_io_i18n_data/locale)
install(TARGETS en_HK LIBRARY DESTINATION lib/fast_io_i18n_data/locale)
install(TARGETS en_IE LIBRARY DESTINATION lib/fast_io_i18n_data/locale)
install(TARGETS en_IE_euro LIBRARY DESTINATION lib/fast_io_i18n_data/locale)
install(TARGETS en_IL LIBRARY DESTINATION lib/fast_io_i18n_data/locale)
install(TARGETS en_IN LIBRARY DESTINATION lib/fast_io_i18n_data/locale)
install(TARGETS en_NG LIBRARY DESTINATION lib/fast_io_i18n_data/locale)
install(TARGETS en_NZ LIBRARY DESTINATION lib/fast_io_i18n_data/locale)
install(TARGETS en_PH LIBRARY DESTINATION lib/fast_io_i18n_data/locale)
install(TARGETS en_SC LIBRARY DESTINATION lib/fast_io_i18n_data/locale)
install(TARGETS en_SG LIBRARY DESTINATION lib/fast_io_i18n_data/locale)
install(TARGETS en_US LIBRARY DESTINATION lib/fast_io_i18n_data/locale)
install(TARGETS en_ZA LIBRARY DESTINATION lib/fast_io_i18n_data/locale)
install(TARGETS en_ZM LIBRARY DESTINATION lib/fast_io_i18n_data/locale)
install(TARGETS en_ZW LIBRARY DESTINATION lib/fast_io_i18n_data/locale)
install(TARGETS eo LIBRARY DESTINATION lib/fast_io_i18n_data/locale)
install(TARGETS es_AR LIBRARY DESTINATION lib/fast_io_i18n_data/locale)
install(TARGETS es_BO LIBRARY DESTINATION lib/fast_io_i18n_data/locale)
install(TARGETS es_CL LIBRARY DESTINATION lib/fast_io_i18n_data/locale)
install(TARGETS es_CO LIBRARY DESTINATION lib/fast_io_i18n_data/locale)
install(TARGETS es_CR LIBRARY DESTINATION lib/fast_io_i18n_data/locale)
install(TARGETS es_CU LIBRARY DESTINATION lib/fast_io_i18n_data/locale)
install(TARGETS es_DO LIBRARY DESTINATION lib/fast_io_i18n_data/locale)
install(TARGETS es_EC LIBRARY DESTINATION lib/fast_io_i18n_data/locale)
install(TARGETS es_ES LIBRARY DESTINATION lib/fast_io_i18n_data/locale)
install(TARGETS es_ES_euro LIBRARY DESTINATION lib/fast_io_i18n_data/locale)
install(TARGETS es_GT LIBRARY DESTINATION lib/fast_io_i18n_data/locale)
install(TARGETS es_HN LIBRARY DESTINATION lib/fast_io_i18n_data/locale)
install(TARGETS es_MX LIBRARY DESTINATION lib/fast_io_i18n_data/locale)
install(TARGETS es_NI LIBRARY DESTINATION lib/fast_io_i18n_data/locale)
install(TARGETS es_PA LIBRARY DESTINATION lib/fast_io_i18n_data/locale)
install(TARGETS es_PE LIBRARY DESTINATION lib/fast_io_i18n_data/locale)
install(TARGETS es_PR LIBRARY DESTINATION lib/fast_io_i18n_data/locale)
install(TARGETS es_PY LIBRARY DESTINATION lib/fast_io_i18n_data/locale)
install(TARGETS es_SV LIBRARY DESTINATION lib/fast_io_i18n_data/locale)
install(TARGETS es_US LIBRARY DESTINATION lib/fast_io_i18n_data/locale)
install(TARGETS es_UY LIBRARY DESTINATION lib/fast_io_i18n_data/locale)
install(TARGETS es_VE LIBRARY DESTINATION lib/fast_io_i18n_data/locale)
install(TARGETS et_EE LIBRARY DESTINATION lib/fast_io_i18n_data/locale)
install(TARGETS eu_ES LIBRARY DESTINATION lib/fast_io_i18n_data/locale)
install(TARGETS eu_ES_euro LIBRARY DESTINATION lib/fast_io_i18n_data/locale)
install(TARGETS fa_IR LIBRARY DESTINATION lib/fast_io_i18n_data/locale)
install(TARGETS ff_SN LIBRARY DESTINATION lib/fast_io_i18n_data/locale)
install(TARGETS fil_PH LIBRARY DESTINATION lib/fast_io_i18n_data/locale)
install(TARGETS fi_FI LIBRARY DESTINATION lib/fast_io_i18n_data/locale)
install(TARGETS fi_FI_euro LIBRARY DESTINATION lib/fast_io_i18n_data/locale)
install(TARGETS fo_FO LIBRARY DESTINATION lib/fast_io_i18n_data/locale)
install(TARGETS fr_BE LIBRARY DESTINATION lib/fast_io_i18n_data/locale)
install(TARGETS fr_BE_euro LIBRARY DESTINATION lib/fast_io_i18n_data/locale)
install(TARGETS fr_CA LIBRARY DESTINATION lib/fast_io_i18n_data/locale)
install(TARGETS fr_CH LIBRARY DESTINATION lib/fast_io_i18n_data/locale)
install(TARGETS fr_FR LIBRARY DESTINATION lib/fast_io_i18n_data/locale)
install(TARGETS fr_FR_euro LIBRARY DESTINATION lib/fast_io_i18n_data/locale)
install(TARGETS fr_LU LIBRARY DESTINATION lib/fast_io_i18n_data/locale)
install(TARGETS fr_LU_euro LIBRARY DESTINATION lib/fast_io_i18n_data/locale)
install(TARGETS fur_IT LIBRARY DESTINATION lib/fast_io_i18n_data/locale)
install(TARGETS fy_DE LIBRARY DESTINATION lib/fast_io_i18n_data/locale)
install(TARGETS fy_NL LIBRARY DESTINATION lib/fast_io_i18n_data/locale)
install(TARGETS ga_IE LIBRARY DESTINATION lib/fast_io_i18n_data/locale)
install(TARGETS ga_IE_euro LIBRARY DESTINATION lib/fast_io_i18n_data/locale)
install(TARGETS gd_GB LIBRARY DESTINATION lib/fast_io_i18n_data/locale)
install(TARGETS gez_ER LIBRARY DESTINATION lib/fast_io_i18n_data/locale)
install(TARGETS gez_ER_abegede LIBRARY DESTINATION lib/fast_io_i18n_data/locale)
install(TARGETS gez_ET LIBRARY DESTINATION lib/fast_io_i18n_data/locale)
install(TARGETS gez_ET_abegede LIBRARY DESTINATION lib/fast_io_i18n_data/locale)
install(TARGETS gl_ES LIBRARY DESTINATION lib/fast_io_i18n_data/locale)
install(TARGETS gl_ES_euro LIBRARY DESTINATION lib/fast_io_i18n_data/locale)
install(TARGETS gu_IN LIBRARY DESTINATION lib/fast_io_i18n_data/locale)
install(TARGETS gv_GB LIBRARY DESTINATION lib/fast_io_i18n_data/locale)
install(TARGETS hak_TW LIBRARY DESTINATION lib/fast_io_i18n_data/locale)
install(TARGETS ha_NG LIBRARY DESTINATION lib/fast_io_i18n_data/locale)
install(TARGETS he_IL LIBRARY DESTINATION lib/fast_io_i18n_data/locale)
install(TARGETS hif_FJ LIBRARY DESTINATION lib/fast_io_i18n_data/locale)
install(TARGETS hi_IN LIBRARY DESTINATION lib/fast_io_i18n_data/locale)
install(TARGETS hne_IN LIBRARY DESTINATION lib/fast_io_i18n_data/locale)
install(TARGETS hr_HR LIBRARY DESTINATION lib/fast_io_i18n_data/locale)
install(TARGETS hsb_DE LIBRARY DESTINATION lib/fast_io_i18n_data/locale)
install(TARGETS ht_HT LIBRARY DESTINATION lib/fast_io_i18n_data/locale)
install(TARGETS hu_HU LIBRARY DESTINATION lib/fast_io_i18n_data/locale)
install(TARGETS hy_AM LIBRARY DESTINATION lib/fast_io_i18n_data/locale)
install(TARGETS i18n LIBRARY DESTINATION lib/fast_io_i18n_data/locale)
install(TARGETS ia_FR LIBRARY DESTINATION lib/fast_io_i18n_data/locale)
install(TARGETS id_ID LIBRARY DESTINATION lib/fast_io_i18n_data/locale)
install(TARGETS ig_NG LIBRARY DESTINATION lib/fast_io_i18n_data/locale)
install(TARGETS ik_CA LIBRARY DESTINATION lib/fast_io_i18n_data/locale)
install(TARGETS is_IS LIBRARY DESTINATION lib/fast_io_i18n_data/locale)
install(TARGETS it_CH LIBRARY DESTINATION lib/fast_io_i18n_data/locale)
install(TARGETS it_IT LIBRARY DESTINATION lib/fast_io_i18n_data/locale)
install(TARGETS it_IT_euro LIBRARY DESTINATION lib/fast_io_i18n_data/locale)
install(TARGETS iu_CA LIBRARY DESTINATION lib/fast_io_i18n_data/locale)
install(TARGETS ja_JP LIBRARY DESTINATION lib/fast_io_i18n_data/locale)
install(TARGETS kab_DZ LIBRARY DESTINATION lib/fast_io_i18n_data/locale)
install(TARGETS ka_GE LIBRARY DESTINATION lib/fast_io_i18n_data/locale)
install(TARGETS kk_KZ LIBRARY DESTINATION lib/fast_io_i18n_data/locale)
install(TARGETS kl_GL LIBRARY DESTINATION lib/fast_io_i18n_data/locale)
install(TARGETS km_KH LIBRARY DESTINATION lib/fast_io_i18n_data/locale)
install(TARGETS kn_IN LIBRARY DESTINATION lib/fast_io_i18n_data/locale)
install(TARGETS kok_IN LIBRARY DESTINATION lib/fast_io_i18n_data/locale)
install(TARGETS ko_KR LIBRARY DESTINATION lib/fast_io_i18n_data/locale)
install(TARGETS ks_IN LIBRARY DESTINATION lib/fast_io_i18n_data/locale)
install(TARGETS ks_IN_devanagari LIBRARY DESTINATION lib/fast_io_i18n_data/locale)
install(TARGETS ku_TR LIBRARY DESTINATION lib/fast_io_i18n_data/locale)
install(TARGETS kw_GB LIBRARY DESTINATION lib/fast_io_i18n_data/locale)
install(TARGETS ky_KG LIBRARY DESTINATION lib/fast_io_i18n_data/locale)
install(TARGETS lb_LU LIBRARY DESTINATION lib/fast_io_i18n_data/locale)
install(TARGETS lg_UG LIBRARY DESTINATION lib/fast_io_i18n_data/locale)
install(TARGETS lij_IT LIBRARY DESTINATION lib/fast_io_i18n_data/locale)
install(TARGETS li_BE LIBRARY DESTINATION lib/fast_io_i18n_data/locale)
install(TARGETS li_NL LIBRARY DESTINATION lib/fast_io_i18n_data/locale)
install(TARGETS ln_CD LIBRARY DESTINATION lib/fast_io_i18n_data/locale)
install(TARGETS lo_LA LIBRARY DESTINATION lib/fast_io_i18n_data/locale)
install(TARGETS lt_LT LIBRARY DESTINATION lib/fast_io_i18n_data/locale)
install(TARGETS lv_LV LIBRARY DESTINATION lib/fast_io_i18n_data/locale)
install(TARGETS lzh_TW LIBRARY DESTINATION lib/fast_io_i18n_data/locale)
install(TARGETS mag_IN LIBRARY DESTINATION lib/fast_io_i18n_data/locale)
install(TARGETS mai_IN LIBRARY DESTINATION lib/fast_io_i18n_data/locale)
install(TARGETS mai_NP LIBRARY DESTINATION lib/fast_io_i18n_data/locale)
install(TARGETS mfe_MU LIBRARY DESTINATION lib/fast_io_i18n_data/locale)
install(TARGETS mg_MG LIBRARY DESTINATION lib/fast_io_i18n_data/locale)
install(TARGETS mhr_RU LIBRARY DESTINATION lib/fast_io_i18n_data/locale)
install(TARGETS miq_NI LIBRARY DESTINATION lib/fast_io_i18n_data/locale)
install(TARGETS mi_NZ LIBRARY DESTINATION lib/fast_io_i18n_data/locale)
install(TARGETS mjw_IN LIBRARY DESTINATION lib/fast_io_i18n_data/locale)
install(TARGETS mk_MK LIBRARY DESTINATION lib/fast_io_i18n_data/locale)
install(TARGETS ml_IN LIBRARY DESTINATION lib/fast_io_i18n_data/locale)
install(TARGETS mni_IN LIBRARY DESTINATION lib/fast_io_i18n_data/locale)
install(TARGETS mnw_MM LIBRARY DESTINATION lib/fast_io_i18n_data/locale)
install(TARGETS mn_MN LIBRARY DESTINATION lib/fast_io_i18n_data/locale)
install(TARGETS mr_IN LIBRARY DESTINATION lib/fast_io_i18n_data/locale)
install(TARGETS ms_MY LIBRARY DESTINATION lib/fast_io_i18n_data/locale)
install(TARGETS mt_MT LIBRARY DESTINATION lib/fast_io_i18n_data/locale)
install(TARGETS my_MM LIBRARY DESTINATION lib/fast_io_i18n_data/locale)
install(TARGETS nan_TW LIBRARY DESTINATION lib/fast_io_i18n_data/locale)
install(TARGETS nan_TW_latin LIBRARY DESTINATION lib/fast_io_i18n_data/locale)
install(TARGETS nb_NO LIBRARY DESTINATION lib/fast_io_i18n_data/locale)
install(TARGETS nds_DE LIBRARY DESTINATION lib/fast_io_i18n_data/locale)
install(TARGETS nds_NL LIBRARY DESTINATION lib/fast_io_i18n_data/locale)
install(TARGETS ne_NP LIBRARY DESTINATION lib/fast_io_i18n_data/locale)
install(TARGETS nhn_MX LIBRARY DESTINATION lib/fast_io_i18n_data/locale)
install(TARGETS niu_NU LIBRARY DESTINATION lib/fast_io_i18n_data/locale)
install(TARGETS niu_NZ LIBRARY DESTINATION lib/fast_io_i18n_data/locale)
install(TARGETS nl_AW LIBRARY DESTINATION lib/fast_io_i18n_data/locale)
install(TARGETS nl_BE LIBRARY DESTINATION lib/fast_io_i18n_data/locale)
install(TARGETS nl_BE_euro LIBRARY DESTINATION lib/fast_io_i18n_data/locale)
install(TARGETS nl_NL LIBRARY DESTINATION lib/fast_io_i18n_data/locale)
install(TARGETS nl_NL_euro LIBRARY DESTINATION lib/fast_io_i18n_data/locale)
install(TARGETS nn_NO LIBRARY DESTINATION lib/fast_io_i18n_data/locale)
install(TARGETS nr_ZA LIBRARY DESTINATION lib/fast_io_i18n_data/locale)
install(TARGETS nso_ZA LIBRARY DESTINATION lib/fast_io_i18n_data/locale)
install(TARGETS oc_FR LIBRARY DESTINATION lib/fast_io_i18n_data/locale)
install(TARGETS om_ET LIBRARY DESTINATION lib/fast_io_i18n_data/locale)
install(TARGETS om_KE LIBRARY DESTINATION lib/fast_io_i18n_data/locale)
install(TARGETS or_IN LIBRARY DESTINATION lib/fast_io_i18n_data/locale)
install(TARGETS os_RU LIBRARY DESTINATION lib/fast_io_i18n_data/locale)
install(TARGETS pap_AW LIBRARY DESTINATION lib/fast_io_i18n_data/locale)
install(TARGETS pap_CW LIBRARY DESTINATION lib/fast_io_i18n_data/locale)
install(TARGETS pa_IN LIBRARY DESTINATION lib/fast_io_i18n_data/locale)
install(TARGETS pa_PK LIBRARY DESTINATION lib/fast_io_i18n_data/locale)
install(TARGETS pl_PL LIBRARY DESTINATION lib/fast_io_i18n_data/locale)
install(TARGETS POSIX LIBRARY DESTINATION lib/fast_io_i18n_data/locale)
install(TARGETS ps_AF LIBRARY DESTINATION lib/fast_io_i18n_data/locale)
install(TARGETS pt_BR LIBRARY DESTINATION lib/fast_io_i18n_data/locale)
install(TARGETS pt_PT LIBRARY DESTINATION lib/fast_io_i18n_data/locale)
install(TARGETS pt_PT_euro LIBRARY DESTINATION lib/fast_io_i18n_data/locale)
install(TARGETS quz_PE LIBRARY DESTINATION lib/fast_io_i18n_data/locale)
install(TARGETS raj_IN LIBRARY DESTINATION lib/fast_io_i18n_data/locale)
install(TARGETS ro_RO LIBRARY DESTINATION lib/fast_io_i18n_data/locale)
install(TARGETS ru_RU LIBRARY DESTINATION lib/fast_io_i18n_data/locale)
install(TARGETS ru_UA LIBRARY DESTINATION lib/fast_io_i18n_data/locale)
install(TARGETS rw_RW LIBRARY DESTINATION lib/fast_io_i18n_data/locale)
install(TARGETS sah_RU LIBRARY DESTINATION lib/fast_io_i18n_data/locale)
install(TARGETS sat_IN LIBRARY DESTINATION lib/fast_io_i18n_data/locale)
install(TARGETS sa_IN LIBRARY DESTINATION lib/fast_io_i18n_data/locale)
install(TARGETS sc_IT LIBRARY DESTINATION lib/fast_io_i18n_data/locale)
install(TARGETS sd_IN LIBRARY DESTINATION lib/fast_io_i18n_data/locale)
install(TARGETS sd_IN_devanagari LIBRARY DESTINATION lib/fast_io_i18n_data/locale)
install(TARGETS se_NO LIBRARY DESTINATION lib/fast_io_i18n_data/locale)
install(TARGETS sgs_LT LIBRARY DESTINATION lib/fast_io_i18n_data/locale)
install(TARGETS shn_MM LIBRARY DESTINATION lib/fast_io_i18n_data/locale)
install(TARGETS shs_CA LIBRARY DESTINATION lib/fast_io_i18n_data/locale)
install(TARGETS sid_ET LIBRARY DESTINATION lib/fast_io_i18n_data/locale)
install(TARGETS si_LK LIBRARY DESTINATION lib/fast_io_i18n_data/locale)
install(TARGETS sk_SK LIBRARY DESTINATION lib/fast_io_i18n_data/locale)
install(TARGETS sl_SI LIBRARY DESTINATION lib/fast_io_i18n_data/locale)
install(TARGETS sm_WS LIBRARY DESTINATION lib/fast_io_i18n_data/locale)
install(TARGETS so_DJ LIBRARY DESTINATION lib/fast_io_i18n_data/locale)
install(TARGETS so_ET LIBRARY DESTINATION lib/fast_io_i18n_data/locale)
install(TARGETS so_KE LIBRARY DESTINATION lib/fast_io_i18n_data/locale)
install(TARGETS so_SO LIBRARY DESTINATION lib/fast_io_i18n_data/locale)
install(TARGETS sq_AL LIBRARY DESTINATION lib/fast_io_i18n_data/locale)
install(TARGETS sq_MK LIBRARY DESTINATION lib/fast_io_i18n_data/locale)
install(TARGETS sr_ME LIBRARY DESTINATION lib/fast_io_i18n_data/locale)
install(TARGETS sr_RS LIBRARY DESTINATION lib/fast_io_i18n_data/locale)
install(TARGETS sr_RS_latin LIBRARY DESTINATION lib/fast_io_i18n_data/locale)
install(TARGETS ss_ZA LIBRARY DESTINATION lib/fast_io_i18n_data/locale)
install(TARGETS st_ZA LIBRARY DESTINATION lib/fast_io_i18n_data/locale)
install(TARGETS sv_FI LIBRARY DESTINATION lib/fast_io_i18n_data/locale)
install(TARGETS sv_FI_euro LIBRARY DESTINATION lib/fast_io_i18n_data/locale)
install(TARGETS sv_SE LIBRARY DESTINATION lib/fast_io_i18n_data/locale)
install(TARGETS sw_KE LIBRARY DESTINATION lib/fast_io_i18n_data/locale)
install(TARGETS sw_TZ LIBRARY DESTINATION lib/fast_io_i18n_data/locale)
install(TARGETS szl_PL LIBRARY DESTINATION lib/fast_io_i18n_data/locale)
install(TARGETS ta_IN LIBRARY DESTINATION lib/fast_io_i18n_data/locale)
install(TARGETS ta_LK LIBRARY DESTINATION lib/fast_io_i18n_data/locale)
install(TARGETS tcy_IN LIBRARY DESTINATION lib/fast_io_i18n_data/locale)
install(TARGETS te_IN LIBRARY DESTINATION lib/fast_io_i18n_data/locale)
install(TARGETS tg_TJ LIBRARY DESTINATION lib/fast_io_i18n_data/locale)
install(TARGETS the_NP LIBRARY DESTINATION lib/fast_io_i18n_data/locale)
install(TARGETS th_TH LIBRARY DESTINATION lib/fast_io_i18n_data/locale)
install(TARGETS tig_ER LIBRARY DESTINATION lib/fast_io_i18n_data/locale)
install(TARGETS ti_ER LIBRARY DESTINATION lib/fast_io_i18n_data/locale)
install(TARGETS ti_ET LIBRARY DESTINATION lib/fast_io_i18n_data/locale)
install(TARGETS tk_TM LIBRARY DESTINATION lib/fast_io_i18n_data/locale)
install(TARGETS tl_PH LIBRARY DESTINATION lib/fast_io_i18n_data/locale)
install(TARGETS tn_ZA LIBRARY DESTINATION lib/fast_io_i18n_data/locale)
install(TARGETS to_TO LIBRARY DESTINATION lib/fast_io_i18n_data/locale)
install(TARGETS tpi_PG LIBRARY DESTINATION lib/fast_io_i18n_data/locale)
install(TARGETS tr_CY LIBRARY DESTINATION lib/fast_io_i18n_data/locale)
install(TARGETS tr_TR LIBRARY DESTINATION lib/fast_io_i18n_data/locale)
install(TARGETS ts_ZA LIBRARY DESTINATION lib/fast_io_i18n_data/locale)
install(TARGETS tt_RU LIBRARY DESTINATION lib/fast_io_i18n_data/locale)
install(TARGETS tt_RU_iqtelif LIBRARY DESTINATION lib/fast_io_i18n_data/locale)
install(TARGETS ug_CN LIBRARY DESTINATION lib/fast_io_i18n_data/locale)
install(TARGETS uk_UA LIBRARY DESTINATION lib/fast_io_i18n_data/locale)
install(TARGETS unm_US LIBRARY DESTINATION lib/fast_io_i18n_data/locale)
install(TARGETS ur_IN LIBRARY DESTINATION lib/fast_io_i18n_data/locale)
install(TARGETS ur_PK LIBRARY DESTINATION lib/fast_io_i18n_data/locale)
install(TARGETS uz_UZ LIBRARY DESTINATION lib/fast_io_i18n_data/locale)
install(TARGETS uz_UZ_cyrillic LIBRARY DESTINATION lib/fast_io_i18n_data/locale)
install(TARGETS ve_ZA LIBRARY DESTINATION lib/fast_io_i18n_data/locale)
install(TARGETS vi_VN LIBRARY DESTINATION lib/fast_io_i18n_data/locale)
install(TARGETS wae_CH LIBRARY DESTINATION lib/fast_io_i18n_data/locale)
install(TARGETS wal_ET LIBRARY DESTINATION lib/fast_io_i18n_data/locale)
install(TARGETS wa_BE LIBRARY DESTINATION lib/fast_io_i18n_data/locale)
install(TARGETS wa_BE_euro LIBRARY DESTINATION lib/fast_io_i18n_data/locale)
install(TARGETS wo_SN LIBRARY DESTINATION lib/fast_io_i18n_data/locale)
install(TARGETS xh_ZA LIBRARY DESTINATION lib/fast_io_i18n_data/locale)
install(TARGETS yi_US LIBRARY DESTINATION lib/fast_io_i18n_data/locale)
install(TARGETS yo_NG LIBRARY DESTINATION lib/fast_io_i18n_data/locale)
install(TARGETS yue_HK LIBRARY DESTINATION lib/fast_io_i18n_data/locale)
install(TARGETS yuw_PG LIBRARY DESTINATION lib/fast_io_i18n_data/locale)
install(TARGETS zh_CN LIBRARY DESTINATION lib/fast_io_i18n_data/locale)
install(TARGETS zh_HK LIBRARY DESTINATION lib/fast_io_i18n_data/locale)
install(TARGETS zh_SG LIBRARY DESTINATION lib/fast_io_i18n_data/locale)
install(TARGETS zh_TW LIBRARY DESTINATION lib/fast_io_i18n_data/locale)
install(TARGETS zu_ZA LIBRARY DESTINATION lib/fast_io_i18n_data/locale)
